# Monitoring_system

./: .gitignore  CMakeLists.txt  README.md
Src/: CMakeLists.txt  main.cpp  resource.rc
Src/AI/: AI.cpp  AI.h  CMakeLists.txt  inference.cpp  inference.h  inference_GPU.cpp  inference_GPU.h  model.h
Src/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  CameraSave.cpp  CameraSave.hpp
Src/Lib/LibCUDNN/lib/: cudnn64_9.lib  cudnn_adv64_9.lib  cudnn_cnn.lib  cudnn_engines_precompiled.lib  cudnn_engines_runtime_compiled.lib  cudnn_graph64_9.lib  cudnn_heuristic.lib  cudnn_ops.lib
Src/Lib/mylib/Debug/: Camera.lib  Login.lib  MainWindow.lib
Src/Lib/mylib/Release/: AI.lib  Camera.lib  Login.lib  MainWindow.lib
Src/Login/: CMakeLists.txt  Login.cpp  Login.h  bcrypt.cpp  bcrypt.h  blowfish.cpp  node_blf.h  openbsd.h
Src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
Src/PublicModule/: CMakeLists.txt  ImageFormateChange.h  ShareQueue.h
Src/Resource/: resource.qrc
Src/Resource/Forms/: AddCamera.ui  Login.ui  MainWindow.ui
tests/: CMakeLists.txt
tests/CameraSaveTest/: CmakeLists.txt  test.cpp
tests/ImageFormateChangeTest/: CMakeLists.txt  test.cpp
tests/ShardQueueTest/: CMakeLists.txt  test.cpp
tests/main/: CMakeLists.txt
